--- a/LEDControl_v2/LEDControl_v2/Objects/LEDControl_v1.build_log.htm
+++ b/LEDControl_v2/LEDControl_v2/Objects/LEDControl_v1.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  06/19/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling systick_program.c...
+compiling app.c...
 linking...
-Program Size: Code=3048 RO-data=652 RW-data=32 ZI-data=608  
+Program Size: Code=4204 RO-data=652 RW-data=44 ZI-data=612  
 ".\Objects\LEDControl_v1.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
