--- a/LEDControl_v2/LEDControl_v2/Objects/LEDControl_v1.build_log.htm
+++ b/LEDControl_v2/LEDControl_v2/Objects/LEDControl_v1.build_log.htm
@@ -27,9 +27,12 @@ Project File Date:  06/19/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling app.c...
+compiling main.c...
+compiling systick_program.c...
 compiling systick_handler_program.c...
 linking...
-Program Size: Code=4228 RO-data=652 RW-data=44 ZI-data=612  
+Program Size: Code=4236 RO-data=652 RW-data=44 ZI-data=612  
 ".\Objects\LEDControl_v1.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -59,7 +62,7 @@ Package Vendor: Keil
       Source file:   Device\Source\ARM\startup_TM4C123.s
       Source file:   Device\Source\system_TM4C123.c
       Include file:  Device\Include\TM4C123\TM4C123.h
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
